--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "vfile": "^5.3.7"
   },
   "devDependencies": {
+    "@google-analytics/data": "^4.4.0",
     "@trevorblades/eslint-config": "^7.2.7",
     "cpx": "^1.5.0",
     "eslint": "^7.32.0",
