--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "mdast-util-from-markdown": "^0.8.5",
     "node-fetch": "^2.6.7",
     "path-browserify": "^1.0.1",
+    "pluralize": "^8.0.0",
     "polished": "^4.1.4",
     "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
@@ -88,7 +89,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.1",
-
     "react-instantsearch": "^7.3.0",
     "react-instantsearch-dom": "^6.40.4",
     "react-markdown": "^8.0.0",
