--- a/.github/workflows/docs-link-check.yml
+++ b/.github/workflows/docs-link-check.yml
@@ -1,8 +1,8 @@
 name: Check Apollo docs links
 
 on:
-  schedule:
-    - cron: '50 * * * *'  
+  #schedule:
+  #  - cron: '0 5 * * 6'  
   workflow_dispatch:
   
 jobs:
