--- a/src/content/graphos/org/config.json
+++ b/src/content/graphos/org/config.json
@@ -44,6 +44,18 @@
         [
           "enterprise"
         ]
+      ],
+      "Self-serve": [
+        "/sso/self-serve",
+        [
+          "enterprise", "preview"
+        ]
+      ],
+      "Multi-organization": [
+        "/sso/multi-org",
+        [
+          "enterprise", "preview"
+        ]
       ]
     }
   }
