--- a/src/content/graphos/org/config.json
+++ b/src/content/graphos/org/config.json
@@ -46,7 +46,7 @@
         ]
       ],
       "Self-serve": [
-        "/sso/self-serve",
+        "/sso/setup",
         [
           "enterprise", "preview"
         ]
