Rename Azure AD -> Microsoft Entra ID

--- a/.github/styles/Apollo/Headings.yml
+++ b/.github/styles/Apollo/Headings.yml
@@ -19,7 +19,7 @@ exceptions:
   - Apollo Router
   - Apollo Server
   - AWS
-  - Azure
+  - Azure (AD)?
   - Bookmark Apps?
   - CI(/CD)?
   - CLI
@@ -31,6 +31,7 @@ exceptions:
   - CORS
   - Cosmos
   - Create an Apollo account
+  - Create an Azure AD app registration
   - Datadog Metrics Explorer
   - Docker
   - Emmet
