--- a/src/content/graphos/org/config.json
+++ b/src/content/graphos/org/config.json
@@ -33,8 +33,8 @@
           "enterprise"
         ]
       ],
-      "Azure AD": [
-        "/sso/azure-ad-integration-guide",
+      "Microsoft Entra ID": [
+        "/sso/microsoft-entra-id-integration-guide",
         [
           "enterprise"
         ]
@@ -46,7 +46,7 @@
         ]
       ],
       "Multi-organization": [
-        "/sso/multi-org",
+        "/sso/multi-organization",
         [
           "enterprise", "preview"
         ]
