--- a/src/content/graphos/org/config.json
+++ b/src/content/graphos/org/config.json
@@ -45,6 +45,12 @@
           "enterprise"
         ]
       ],
+      "OIDC": [
+        "/sso/oidc-integration-guide",
+        [
+          "enterprise", "preview"
+        ]
+      ],
       "Multi-organization": [
         "/sso/multi-organization",
         [
