Remove images from troubleshooting

--- a/src/content/graphos/cloud-routing/config.json
+++ b/src/content/graphos/cloud-routing/config.json
@@ -40,7 +40,7 @@
         "preview"
       ]],
       "Amazon VPC Lattice": {
-        "Configure Lattice":[ "/dedicated/lattice",
+        "Lattice configuration":[ "/dedicated/lattice",
         [
           "preview"
         ]],
