Add proposal stub

--- a/src/content/graphos/metrics/config.json
+++ b/src/content/graphos/metrics/config.json
@@ -36,6 +36,7 @@
       "Setup": "/notifications/notification-setup",
       "Daily reports": "/notifications/daily-reports",
       "Schema changes": "/notifications/schema-change-integration",
+      "Schema proposals": "/notifications/schema-proposal-integration",
       "Performance alerts": [
         "/notifications/performance-alerts",
         [
