--- a/src/content/graphos/metrics/config.json
+++ b/src/content/graphos/metrics/config.json
@@ -33,7 +33,7 @@
       "Segmenting by client": "/client-awareness"
     },
     "Notifications and alerts": {
-      "Setup": "/notifications/notification-setup",
+      "Overview": "/notifications/",
       "Daily reports": "/notifications/daily-reports",
       "Schema changes": "/notifications/schema-change-integration",
       "Schema proposals": "/notifications/schema-proposal-integration",
