Update createNotification usage

--- a/src/content/graphos/metrics/config.json
+++ b/src/content/graphos/metrics/config.json
@@ -36,7 +36,12 @@
       "Overview": "/notifications/",
       "Daily reports": "/notifications/daily-reports",
       "Schema changes": "/notifications/schema-change-integration",
-      "Schema proposals": "/notifications/schema-proposal-integration",
+      "Schema proposals": [
+        "/notifications/schema-proposal-integration",
+        [
+          "enterprise"
+        ]
+      ],
       "Build status": [
         "/notifications/build-status-notification",
         [
