--- a/src/content/graphos/enterprise/config.json
+++ b/src/content/graphos/enterprise/config.json
@@ -9,11 +9,7 @@
       "docset:graphos/explorer",
       "docset:graphos/enterprise"
     ],
-    [
-      "docset:rover",
-      "docset:federation",
-      "docset:router"
-    ]
+    ["docset:rover", "docset:federation", "docset:router"]
   ],
   "sidebar": {
     "Overview": "/",
@@ -23,15 +19,11 @@
         "Overview": "https://www.apollographql.com/docs/router/enterprise-features",
         "GraphQL subscriptions": "https://www.apollographql.com/docs/router/executing-operations/subscription-support",
         "Distributed caching": "https://www.apollographql.com/docs/router/configuration/distributed-caching",
-        "Entity caching": [ "https://www.apollographql.com/docs/router/configuration/entity-caching",
-        [
-          "preview"
-        ]],
+        "Entity caching": ["https://www.apollographql.com/docs/router/configuration/entity-caching", ["preview"]],
         "JWT Authentication": "https://www.apollographql.com/docs/router/configuration/authn-jwt",
         "Authorization": "https://www.apollographql.com/docs/router/configuration/authorization",
         "Incremental subgraph migration": "https://www.apollographql.com/docs/federation/entities-advanced/#incremental-migration-with-progressive-override",
-        "Safelisting with persisted queries":
-          "https://www.apollographql.com/docs/router/configuration/persisted-queries", 
+        "Safelisting with persisted queries": "https://www.apollographql.com/docs/router/configuration/persisted-queries",
         "Operation limits": "https://www.apollographql.com/docs/router/configuration/operation-limits",
         "External coprocessing": "https://www.apollographql.com/docs/router/customizations/coprocessor"
       }
@@ -48,13 +40,21 @@
     },
     "Metrics & Reporting": {
       "Datadog forwarding": "https://www.apollographql.com/docs/graphos/metrics/datadog-integration",
-      "Build status notifications": ["https://www.apollographql.com/docs/graphos/metrics/notifications/build-status-notification",
-      ["experimental"]
-    ]
+      "Build status notifications": [
+        "https://www.apollographql.com/docs/graphos/metrics/notifications/build-status-notification",
+        ["experimental"]
+      ]
     },
     "Architecture": {
-      "Supergraph Architecture Framework": "/supergraph-architecture-framework",
-      "Reference Architecture": "/reference-architecture"
+      "Reference Architecture": "/reference-architecture",
+      "Supergraph Architecture Framework": {
+        "Overview": "/supergraph-architecture-framework",
+        "Operational Excellence": "/supergraph-architecture-framework/operational-excellence",
+        "Security": "/supergraph-architecture-framework/security",
+        "Reliability": "/supergraph-architecture-framework/reliability",
+        "Performance": "/supergraph-architecture-framework/performance",
+        "Developer Experience": "/supergraph-architecture-framework/developer-experience"
+      }
     }
   }
 }
