Remove migration guide

--- a/src/content/graphos/cloud-routing/config.json
+++ b/src/content/graphos/cloud-routing/config.json
@@ -19,8 +19,7 @@
     "Overview": "/",
     "Configuration": "/configuration",
     "Serverless": {
-      "Overview": "/serverless",
-      "Migrate to AWS":"/serverless/aws-migration"
+      "Overview": "/serverless"
     },
     "Dedicated": {
       "Overview": ["/dedicated",
