--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -4,13 +4,13 @@
     "Home": "/",
     "What is GraphOS?": "/intro/platform",
     "About GraphQL": {
-      "Why adopt GraphQL?": "/intro/benefits",
+      "Why Adopt GraphQL?": "/intro/benefits",
       "Glossary": "/resources/glossary",
       "FAQ": "/resources/faq",
       "Principled GraphQL": "https://principledgraphql.com"
     },
     "Release Policies": {
-      "Product launch stages": "/resources/product-launch-stages",
+      "Product Launch Stages": "/resources/product-launch-stages",
       "Elastic License v2 FAQ": "/resources/elastic-license-v2-faq"
     },
     "Changelogs": "changelog"
