--- a/src/content/graphos/cloud-routing/config.json
+++ b/src/content/graphos/cloud-routing/config.json
@@ -18,7 +18,10 @@
   "sidebar": {
     "Overview": "/",
     "Configuration": "/configuration",
-    "Cloud Dedicated": {
+    "Serverless": {
+      "Overview": "/serverless"
+    },
+    "Dedicated": {
       "Overview": ["/dedicated",
       [
         "preview"
