Mark schema proposal notifications as preview

--- a/src/content/graphos/metrics/config.json
+++ b/src/content/graphos/metrics/config.json
@@ -39,7 +39,8 @@
       "Schema proposals": [
         "/notifications/schema-proposal-integration",
         [
-          "enterprise"
+          "enterprise",
+          "preview"
         ]
       ],
       "Build status": [
