Add schema proposal webhooks (#839)
* Update overview

* Add proposal stub

* Move setup instructions to shared components

* Rename overview page and create redirect

* Use shared components

* Remove Discord Link from Experimental Feature

* Vale

* Update createNotification usage

* Copyedit

* Add field tables

* Consistency

* Copyedits

* Update meta descriptions

* Add schema proposal details

* Copyedit

* Change "field" to "input"

* Copyedit

* UI update alignment

* Mark schema proposal notifications as preview

--- a/src/content/graphos/metrics/config.json
+++ b/src/content/graphos/metrics/config.json
@@ -33,13 +33,14 @@
       "Segmenting by client": "/client-awareness"
     },
     "Notifications and alerts": {
-      "Setup": "/notifications/notification-setup",
+      "Overview": "/notifications/",
       "Daily reports": "/notifications/daily-reports",
       "Schema changes": "/notifications/schema-change-integration",
-      "Performance alerts": [
-        "/notifications/performance-alerts",
+      "Schema proposals": [
+        "/notifications/schema-proposal-integration",
         [
-          "experimental"
+          "enterprise",
+          "preview"
         ]
       ],
       "Build status": [
@@ -47,6 +48,12 @@
         [
           "enterprise",
           "preview"
+        ]
+      ],
+      "Performance alerts": [
+        "/notifications/performance-alerts",
+        [
+          "experimental"
         ]
       ]
     }
