--- a/src/content/graphos/org/config.json
+++ b/src/content/graphos/org/config.json
@@ -57,7 +57,7 @@
         "Generic OIDC Setup": [
           "/sso/oidc-integration-guide",
           [
-            "enterprise", "preview"
+            "enterprise"
           ]
         ]
       },
