--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "airtable": "^0.11.2",
     "algoliasearch": "^4.12.1",
     "apollo-algolia-transform": "^1.0.38",
+    "assert": "^2.1.0",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^4.1.17",
     "gatsby": "4.25.4",
     "gatsby-plugin-algolia": "^0.24.0",
@@ -96,6 +98,7 @@
     "react-markdown": "^8.0.0",
     "react-medium-image-zoom": "^5.1.10",
     "react-player": "^2.10.1",
+    "react-select": "^5.8.0",
     "react-use": "^17.3.2",
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
@@ -105,8 +108,10 @@
     "remark-react": "^9.0.1",
     "remark-typescript": "^0.6.1",
     "search-insights": "^1.8.0",
+    "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "unist-util-visit": "^2.0.3",
+    "util": "^0.12.5",
     "uuid": "^8.3.2",
     "vfile": "^5.3.7"
   },
