--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@playwright/test": "^1.40.1",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
+    "@typeform/embed-react": "^3.17.0",
     "airtable": "^0.11.2",
     "algoliasearch": "^4.12.1",
     "apollo-algolia-transform": "^1.0.38",
