--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@apollo/brand": "^0.5.1",
     "@apollo/chakra-helpers": "^2.0.0",
     "@apollo/client": "^3.5.10",
-    "@apollo/icons": "^0.1.1",
+    "@apollo/icons": "^0.3.3",
     "@apollo/pedia": "^4.1.2",
     "@apollo/signup-tracer": "^2.0.0",
     "@apollo/utm-grabber": "^1.3.1",
@@ -45,6 +45,7 @@
     "@playwright/test": "^1.40.1",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
+    "@typeform/embed-react": "^3.17.0",
     "airtable": "^0.11.2",
     "algoliasearch": "^4.12.1",
     "apollo-algolia-transform": "^1.0.38",
