--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@microsoft/api-extractor-model": "^7.28.2",
+    "@netlify/functions": "^2.7.0",
     "@playwright/test": "^1.40.1",
     "@svgr/webpack": "^5.5.0",
     "@theowenyoung/gatsby-source-git": "^2.3.1",
@@ -75,6 +76,8 @@
     "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-remark": "^5.4.0",
     "github-slugger": "^1.4.0",
+    "google-auth-library": "^9.10.0",
+    "googleapis": "^139.0.0",
     "graphql": "^15.8.0",
     "graphql-ws": "^5.8.2",
     "https-browserify": "^1.0.0",
@@ -98,7 +101,6 @@
     "react-markdown": "^8.0.0",
     "react-medium-image-zoom": "^5.1.10",
     "react-player": "^2.10.1",
-    "react-select": "^5.8.0",
     "react-use": "^17.3.2",
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
