--- a/.github/styles/Apollo/Headings.yml
+++ b/.github/styles/Apollo/Headings.yml
@@ -47,7 +47,7 @@ exceptions:
   - GitHub
   - GraphOS
   - GraphOS Cloud on AWS
-  - GraphOS Router
+  - GraphOS Router features
   - GraphOS Studio
   - GraphQL
   - GraphQL Summit
