--- a/.github/styles/Apollo/WordList.yml
+++ b/.github/styles/Apollo/WordList.yml
@@ -61,7 +61,7 @@ swap:
   "synch": sync
   "towards": toward
   "the CLI": the Rover CLI
-  "the Router": GraphOS Router
+  "the Router": the GraphOS Router
   "the Sandbox": "Apollo Sandbox"
   "Typescript": TypeScript
   "URL": URL
