Update router naming conventions (#871)
* Update naming conventions

* Vale

* Fix headings

* Updates except license + privacy

* Edits

* Edits

* Vale

* Edits

* Update GraphQL Federation

* Updates

* Update Elv2 faq

* Update data privacy

* Vale

* Apply suggestions from code review

Co-authored-by: Edward Huang <edward.huang@apollographql.com>

* Apply suggestions from code review

Co-authored-by: Edward Huang <edward.huang@apollographql.com>

* Update

* Capitalize Federation

---------

Co-authored-by: Edward Huang <edward.huang@apollographql.com>

--- a/.github/styles/Apollo/Headings.yml
+++ b/.github/styles/Apollo/Headings.yml
@@ -17,7 +17,7 @@ exceptions:
   - Apollo iOS
   - Apollo Kotlin
   - Apollo Organization
-  - Apollo Router
+  - Apollo Router Core
   - Apollo Server
   - AWS
   - Azure (AD)?
@@ -47,6 +47,7 @@ exceptions:
   - GitHub
   - GraphOS
   - GraphOS Cloud on AWS
+  - "GraphOS Router( features| setup)?"
   - GraphOS Studio
   - GraphQL
   - GraphQL Summit
@@ -88,5 +89,6 @@ exceptions:
   - Visual
   - VS
   - WebSockets?
+  - Which types of data do the GraphOS Router and Apollo Server send to GraphOS?
   - Windows
   - Zipkin
